--- a/src/App.css
+++ b/src/App.css
@@ -14,15 +14,62 @@
   margin: 10px 0;
   color: #3aa0f1;
 }
+
+.mainPuzzleContainer{
+display: flex;
+flex-direction: row;
+justify-content: center;
+
+align-items: center;
+width: 100vw;
+
+}
+@media screen and (max-width: 700px) {
+  .mainPuzzleContainer{
+    flex-direction:column;
+  }
+  .realImage{
+    margin-top: 20px;
+    margin-right: 20px;
+  }
+  }
 .puzzleBox{
-    border: 10px solid #3aa0f1;
-    border-radius: 10px;
+    border: 5px solid #3aa0f1;
+    
     cursor: pointer;
-    max-width: 280px;
+    max-width: 350px;
+    height: 350px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.realImage{
+  max-width: 350px;
+  width: 100%;
+  height:350px;
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 5px solid #3aa0f1;
+}
+
+.puzzleBox h2,.realImage h2{
+  color: #2c85c9;
+  margin-bottom: 5px;
+  font-family: 'Silkscreen', cursive;
+  font-weight: normal;
+  padding: 0;
 
 }
 
+.realImage img{
+  max-width: 100%;
+  max-height: 100%;
+
+}
 
 .chooseFile {
     display: none;
