--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,6 @@
 display: flex;
 flex-direction: row;
 justify-content: center;
-
 align-items: center;
 width: 100vw;
 
@@ -45,18 +44,29 @@ width: 100vw;
 }
 
 .realImage{
+  cursor: pointer;
   max-width: 350px;
-  width: 100%;
   height:355px;
+  width: 100%;
   margin-left: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 5px solid #3aa0f1;
 }
 
-.puzzleBox h2,.realImage h2{
+.puzzleBox h2{
   color: #2c85c9;
+  font-family: 'Silkscreen', cursive;
+  font-weight: normal;
+  padding: 0;
+  border-bottom: 2px solid #2c85c9;
+  width: 100%;
+  text-align: center;
+
+}
+.realImage h2{
+  color: #2c85c9;
+  margin: 0;
   margin-bottom: 5px;
   font-family: 'Silkscreen', cursive;
   font-weight: normal;
@@ -67,6 +77,9 @@ width: 100vw;
 .realImage img{
   max-width: 100%;
   max-height: 100%;
+  
+  border: 5px solid #3aa0f1;
+ 
 
 }
 
