--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ width: 100vw;
   }
   }
 .puzzleBox{
+  position: relative;
     border: 5px solid #3aa0f1;
     cursor: pointer;
     max-width: 350px;
@@ -44,6 +45,8 @@ width: 100vw;
 }
 
 .realImage{
+  position: relative;
+  border: 5px solid #3aa0f1;
   cursor: pointer;
   max-width: 350px;
   height:355px;
@@ -58,6 +61,9 @@ width: 100vw;
   color: #2c85c9;
   font-family: 'Silkscreen', cursive;
   font-weight: normal;
+  
+  margin: 0;
+  margin-bottom: 5px;
   padding: 0;
   border-bottom: 2px solid #2c85c9;
   width: 100%;
@@ -65,6 +71,10 @@ width: 100vw;
 
 }
 .realImage h2{
+  
+  border-bottom: 2px solid #2c85c9;
+  width: 100%;
+  text-align: center;
   color: #2c85c9;
   margin: 0;
   margin-bottom: 5px;
@@ -75,11 +85,10 @@ width: 100vw;
 }
 
 .realImage img{
+  position: absolute;
+  top: 38px;
   max-width: 100%;
-  max-height: 100%;
-  
-  border: 5px solid #3aa0f1;
- 
+  max-height: 89.2%;
 
 }
 
