--- a/src/App.css
+++ b/src/App.css
@@ -1,127 +1,70 @@
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
 
-.puzzleContainer{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-}
-
-.heading{
-  margin: 10px 0;
-  color: #3aa0f1;
-}
-
-.mainPuzzleContainer{
-display: flex;
-flex-direction: row;
-justify-content: center;
-align-items: center;
-width: 100vw;
-
-}
-@media screen and (max-width: 700px) {
-  .mainPuzzleContainer{
-    flex-direction:column;
-  }
-  .realImage{
-    margin-top: 20px;
-    margin-right: 20px;
-  }
-  }
-.puzzleBox{
-  position: relative;
-    border: 5px solid #3aa0f1;
-    cursor: pointer;
-    max-width: 350px;
-    height: 355px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.realImage{
-  position: relative;
-  border: 5px solid #3aa0f1;
-  cursor: pointer;
-  max-width: 350px;
-  height:355px;
-  width: 100%;
-  margin-left: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.puzzleBox h2{
-  color: #2c85c9;
-  font-family: 'Silkscreen', cursive;
-  font-weight: normal;
-  
+body{
   margin: 0;
-  margin-bottom: 5px;
   padding: 0;
-  border-bottom: 2px solid #2c85c9;
-  width: 100%;
-  text-align: center;
-
-}
-.realImage h2{
-  
-  border-bottom: 2px solid #2c85c9;
-  width: 100%;
-  text-align: center;
-  color: #2c85c9;
-  margin: 0;
-  margin-bottom: 5px;
-  font-family: 'Silkscreen', cursive;
-  font-weight: normal;
-  padding: 0;
-
+ overflow: hidden; 
+ overscroll-behavior: none;
 }
 
-.realImage img{
+
+video,img{
+  display: none;
+}
+
+#menuItems{
   position: absolute;
-  top: 38px;
-  max-width: 100%;
-  max-height: 89.2%;
-
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background-color: rgba(255, 255, 255, 0.6);
+  text-align: center;
+  padding: 5vmin;
+  border: 1vmin #0065c8 solid;
+  font-size: 7vmin;
+  color: #0065c8;
 }
 
-.chooseFile {
-    display: none;
-  }
-  label {
-    color: white;
-    background-color: #3aa0f1;
-    font-size: 20px;
-    text-align: center;
-    padding: 20px 30px;
-    cursor: pointer;
-    margin-bottom: 50px;
-  }
-  label:hover {
-    background-color: #2c85c9;
-  }
 
-  
-@media screen and (max-width: 300px) {
-  .puzzleBox{
-    border:none
-  }
-  .realImage{
-    border: none;
-  }
-  label{
-    font-size: 15px;
-    padding: 15px 22px;
-    margin-bottom: 30px;
-  }
+button{
+  font-size: 4vmin;
+  padding: 2vmin 3vmin;
+  background-color: #3aa0f1;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  transition: all 0.3s;
+  cursor: pointer;
 }
+
+button:hover{
+  background-color: #0065c8;
+}
+
+button.startAgainBtn{
+  position: absolute;
+  top: 10px;
+  left: 70%;
+  transform: translate(-70%);
+}
+
+button.newGameBtn{
+  position: absolute;
+  top: 10px;
+  left: 30%;
+  transform: translate(-30%);
+}
+
+select{
+  font-size: 4vmin;
+  color: #0065c8;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  border-radius: 1vmin;
+     
+}
+
 
 .modal{
   min-height: 150px;
@@ -130,8 +73,34 @@ width: 100vw;
   font-size: 17px;
   font-weight: bold;
   font-family: 'Silkscreen', cursive;
+  background-color: white;
+  padding: 10px 15px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .modal span{
   font-weight: normal;
+}
+
+.uploadFile{
+  position: absolute;
+  top: 50px;
+  left: 20%;
+  transform: translate(-30%);
+}
+
+.chooseFile {
+  display: none;
+}
+label {
+  color: white;
+  background-color: #3aa0f1;
+  border-radius: 10px;
+  font-size: 4vmin;
+  padding: 2vmin 3vmin;
+  text-align: center;
+  cursor: pointer;
+}
+label:hover {
+  background-color: #2c85c9;
 }
