--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,33 @@
 body{
   margin: 0;
   padding: 0;
- overflow: hidden; 
  overscroll-behavior: none;
- 
+ overflow: hidden;
 }
+
+img{
+  display: none;
+}
+/* 
+.appContainer{
+  max-width: 500px;
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  overflow: hidden;
+} */
 
 
 
 .mainContainer{
-   background: linear-gradient(to bottom, #33ccff 0%, #3366cc 100%);
-  
+  background: linear-gradient(to bottom, #33ccff 0%, #3366cc 100%);
+   overflow: hidden;  
+   overscroll-behavior: none;
+   display: flex;
+   justify-content: center;
+   position: relative;
 }
 
 #menuItems{
@@ -31,11 +48,10 @@ body{
 }
 
 .topButtons{
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 500px;
   height: fit-content;
+  position: absolute;
+  justify-content: center;
   padding: 0;
 }
 
@@ -120,8 +136,9 @@ label {
   color: white;
   background-color: #3aa0f1;
   border-radius: 10px;
-  font-size: 4vmin;
+  font-size: 2.5vmin;
   padding: 2vmin 3vmin;
+  width: 90%;
   text-align: center;
   cursor: pointer;
 }
